# AllHexBoundaryLayerTopologySolver

./: CMakeLists.txt  LICENSE  README.md
src/: disk_triangulations.cpp  disk_triangulations.h  solver.cpp  solver.h
tests/: basic_tests.cpp  eproof.cpp
